--- a/Halan/booking.html
+++ b/Halan/booking.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/font.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/booking.css">
   <script src="scripts/particles.min.js"></script>
   <title>Halan</title>
 </head>
@@ -31,22 +31,110 @@
     </div>
   </header>
 
-  <div class="mainContainer">
-    <div class="mainContainer-content">
-      <h1 class="mainTitle">Safely going, beyond infinite.</h1>
-      <div class="mainDescription">
-        <p class="mainDescription-text">
-          Halan is a space travel company providing the ultimate experience for outer space travel with feature destinations such as the Moon, Mars or Europa. One of our top features is our cheeky customer service and speed - we can get you anywhere safely in our universe within 1 day.
-        </p>
-      </div>
-      <img class="backgroundImg" src="img/bg-image.png" alt="oops">
-      <form>
-        <input class="startButton" type="button" value="Book your adventure" onclick="window.location.href='planets.html'" />
-      </form>
+  <section class="steps">
+    <div class="stepsContainer">
+      <h4 class="step step1">1</h4>
+      <div class="stepSeparator1"></div>
+      <h4 class="step step2">2</h4>
+      <div class="stepSeparator2"></div>
+      <h4 class="step step3">3</h4>
     </div>
-    <!-- <div class="bgCircle"></div>
-    <div class="bgCircle"></div> -->
+  </section>
+
+  <div class="title">
+    <h2>Booking informations</h2>
   </div>
+
+  <section class="mainContainer">
+    <div class="destinationContainer">
+      <h5>Destination</h5>
+      <img src="img/mars-transparent.png" alt="Selected Planet Image" class="selectedPlanet">
+      <h3>Mars</h3>
+    </div>
+
+    <div class="fromPassengersContainer">
+      <div class="fromContainer">
+        <h5>From</h5>
+        <div class="select-wrapper">
+          <div class="select-arrow"></div>
+          <select>
+            <option>Test1</option>
+            <option>Test2</option>
+            <option>Test3</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="passengersContainer">
+        <h5>Passengers</h5>
+        <div class="number-wrapper">
+          <input class="number-input" id="number" type="number" value="0" min="0" max="6">
+        </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="datesPriceContainer">
+      <div class="datesContainer">
+        <h5>Available dates</h5>
+        <div class="gridContainer">
+
+          <div class="dateInputContainer">
+            <input id="date1" class="dateButton" type="radio" name="radio" value="1"/>
+            <div class="dateTile">
+              <label for="date1" class="dateLabel">20/02</label>
+            </div>
+          </div>
+
+          <div class="dateInputContainer">
+            <input id="date2" class="dateButton" type="radio" name="radio" value="2"/>
+            <div class="dateTile">
+              <label for="date1" class="dateLabel">20/02</label>
+            </div>
+          </div>
+
+          <div class="dateInputContainer">
+            <input id="date3" class="dateButton" type="radio" name="radio"/>
+            <div class="dateTile">
+              <label for="date1" class="dateLabel">20/02</label>
+            </div>
+          </div>
+
+          <div class="dateInputContainer">
+            <input id="date4" class="dateButton" type="radio" name="radio"/>
+            <div class="dateTile">
+              <label for="date1" class="dateLabel">20/02</label>
+            </div>
+          </div>
+
+          <div class="dateInputContainer">
+            <input id="date5" class="dateButton" type="radio" name="radio"/>
+            <div class="dateTile">
+              <label for="date1" class="dateLabel">20/02</label>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="priceContainer">
+        <h5>Price</h5>
+        <h2 class="priceDisplay">599€</h2>
+      </div>
+    </div>
+  </section>
+
+
+
+  <div class="buttonContainer">
+    <form>
+      <input class="previousButton" type="button" value="Change destination" onclick="window.location.href='planets.html'"/>
+    </form>
+    <form>
+      <input class="continueButton" type="button" value="Continue" onclick="window.location.href='planets.html'"/>
+    </form>
+  </div>
+
 
   <script type="text/javascript">
     particlesJS("particles-js", {
@@ -160,6 +248,8 @@
       "retina_detect": true
     });
   </script>
+
+
 </body>
 
 </html>
