--- a/Halan/information.html
+++ b/Halan/information.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/font.css">
-  <link rel="stylesheet" href="css/booking.css">
+  <link rel="stylesheet" href="css/information.css">
   <script src="scripts/particles.min.js"></script>
   <title>Halan</title>
 </head>
@@ -46,93 +46,59 @@
   </div>
 
   <section class="mainContainer">
-    <div class="destinationContainer">
-      <h5>Destination</h5>
-      <img src="img/mars-transparent.png" alt="Selected Planet Image" class="selectedPlanet">
-      <h3>Mars</h3>
-    </div>
 
-    <!-- <div class="fromPassengersContainer"> -->
-      <div class="fromContainer">
-        <h5>From</h5>
-        <div class="select-wrapper">
-          <div class="select-arrow"></div>
-          <select>
-            <option>Test1</option>
-            <option>Test2</option>
-            <option>Test3</option>
-          </select>
+    <form class="informationForm" name="inscription" method="post" action="">
+      <div class="inputContainer nameContainer">
+        <h5>Last Name</h5>
+        <div class="ahiuefh">
+          <input type="text" name="lastName" placeholder="Doe"/>
         </div>
       </div>
 
-      <!-- <div class="passengersContainer">
-        <h5>Passengers</h5>
-        <div class="number-wrapper">
-          <input class="number-input" id="number" type="number" value="0" min="0" max="4">
-        </div>
-      </div> -->
-    <!-- </div> -->
-
-    <div class="datesPriceContainer">
-      <div class="datesContainer">
-        <h5>Available dates</h5>
-        <div class="gridContainer">
-
-          <div class="dateInputContainer">
-            <input id="date1" class="dateButton" type="radio" name="radio"/>
-            <div class="dateTile">
-              <label for="date1" class="dateLabel">20/02</label>
-            </div>
-          </div>
-
-          <div class="dateInputContainer">
-            <input id="date2" class="dateButton" type="radio" name="radio"/>
-            <div class="dateTile">
-              <label for="date2" class="dateLabel">20/02</label>
-            </div>
-          </div>
-
-          <div class="dateInputContainer">
-            <input id="date3" class="dateButton" type="radio" name="radio"/>
-            <div class="dateTile">
-              <label for="date3" class="dateLabel">20/02</label>
-            </div>
-          </div>
-
-          <div class="dateInputContainer">
-            <input id="date4" class="dateButton" type="radio" name="radio"/>
-            <div class="dateTile">
-              <label for="date4" class="dateLabel">20/02</label>
-            </div>
-          </div>
-
-          <div class="dateInputContainer">
-            <input id="date5" class="dateButton" type="radio" name="radio"/>
-            <div class="dateTile">
-              <label for="date5" class="dateLabel">20/02</label>
-            </div>
-          </div>
-
+      <div class="inputContainer firstNameContainer">
+        <h5>First Name</h5>
+        <div class="ahiuefh">
+          <input type="text" name="firstName" placeholder="John">
         </div>
       </div>
 
-      <div class="priceContainer">
-        <h5>Price</h5>
-        <h2 class="priceDisplay">599€</h2>
+      <div class="inputContainer birthdayContainer">
+        <h5>Date of birth</h5>
+        <div class="ahiuefh">
+          <input type="date" name="">
+        </div>
       </div>
-    </div>
+
+      <div class="inputContainer mailContainer">
+        <h5>Mail adress</h5>
+        <div class="ahiuefh">
+          <input type="mail" name="" placeholder="example@email.com">
+        </div>
+      </div>
+
+      <div class="inputContainer mailContainer">
+        <div class="">
+          <h5>Heigth</h5>
+          <div class="ahiuefh">
+            <input type="number" name="" placeholder="180">
+          </div>
+        </div>
+        <div class="">
+          <h5>Weigth</h5>
+          <div class="ahiuefh">
+            <input type="number" name="" placeholder="80">
+          </div>
+        </div>
+      </div>
+      <div class="buttonContainer">
+        <input class="previousButton" type='submit' name='previous' value="Change Booking">
+        <input class="continueButton" type='submit' name='continue' value="Continue">
+      </div>
+      <!-- PHP :
+      if(isset($_POST['previous'])) { /* ...clear and reset stuff... */ }
+      else if(isset($_POST['continue']) { /* ...submit stuff... */ } -->
+    </form>
   </section>
-
-
-
-  <div class="buttonContainer">
-    <form>
-      <input class="previousButton" type="button" value="Change destination" onclick="window.location.href='planets.html'"/>
-    </form>
-    <form>
-      <input class="continueButton" type="button" value="Continue" onclick="window.location.href='information.html'"/>
-    </form>
-  </div>
 
 
   <script type="text/javascript">
