--- a/Halan/recap.html
+++ b/Halan/recap.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/font.css">
-  <link rel="stylesheet" href="css/booking.css">
+  <link rel="stylesheet" href="css/recap.css">
   <script src="scripts/particles.min.js"></script>
   <title>Halan</title>
 </head>
@@ -42,85 +42,93 @@
   </section>
 
   <div class="title">
-    <h2>Booking informations</h2>
+    <h2>Recap</h2>
   </div>
 
   <section class="mainContainer">
-    <div class="destinationContainer">
-      <h5>Destination</h5>
-      <img src="img/mars-transparent.png" alt="Selected Planet Image" class="selectedPlanet">
-      <h3>Mars</h3>
-    </div>
 
     <form class="informationForm" name="inscription" method="post" action="">
-      <div class="fromDateContainer">
-        <div class="fromContainer">
-          <h5>From</h5>
-          <div class="select-wrapper">
-            <div class="select-arrow"></div>
-            <select>
-              <option>Test1</option>
-              <option>Test2</option>
-              <option>Test3</option>
-            </select>
-          </div>
-        </div>
 
-        <div class="datesContainer">
-          <h5>Available dates</h5>
-          <div class="gridContainer">
-            <div class="dateInputContainer">
-              <input id="date1" class="dateButton" type="radio" name="radio"/>
-              <div class="dateTile">
-                <label for="date1" class="dateLabel">20/02</label>
-              </div>
-            </div>
-
-            <div class="dateInputContainer">
-              <input id="date2" class="dateButton" type="radio" name="radio"/>
-              <div class="dateTile">
-                <label for="date2" class="dateLabel">20/02</label>
-              </div>
-            </div>
-
-            <div class="dateInputContainer">
-              <input id="date3" class="dateButton" type="radio" name="radio"/>
-              <div class="dateTile">
-                <label for="date3" class="dateLabel">20/02</label>
-              </div>
-            </div>
-
-            <div class="dateInputContainer">
-              <input id="date4" class="dateButton" type="radio" name="radio"/>
-              <div class="dateTile">
-                <label for="date4" class="dateLabel">20/02</label>
-              </div>
-            </div>
-
-            <div class="dateInputContainer">
-              <input id="date5" class="dateButton" type="radio" name="radio"/>
-              <div class="dateTile">
-                <label for="date5" class="dateLabel">20/02</label>
-              </div>
-            </div>
-          </div>
-
+      <div class="inputContainer genderContainer">
+        <h5>From</h5>
+        <div class="select-wrapper">
+          <div class="select-arrow"></div>
+          <select disabled>
+            <option value="">From1</option>
+            <option value="">From2</option>
+            <option value="">From3</option>
+            <option value="">From4</option>
+          </select>
         </div>
       </div>
+
+      <div class="inputContainer planetContainer">
+        <h5>Destination</h5>
+        <div class="select-wrapper">
+          <div class="select-arrow"></div>
+          <select disabled>
+            <option value="">Moon</option>
+            <option value="">Mars</option>
+            <option value="">Mercury</option>
+            <option value="">Venus</option>
+            <option value="">Xenion 500</option>
+            <option value="">Europe</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="inputContainer genderContainer">
+        <h5>Civility</h5>
+        <div class="select-wrapper">
+          <div class="select-arrow"></div>
+          <select disabled>
+            <option value="">Mr</option>
+            <option value="">Ms</option>
+            <option value="">Other</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="inputContainer nameContainer">
+        <h5>Last Name</h5>
+        <input disabled class="textInput nameInput" type="text" name="lastName" placeholder="Doe" value="Doe"/>
+      </div>
+
+      <div class="inputContainer firstNameContainer">
+        <h5>First Name</h5>
+        <input disabled class="textInput firstNameInput" type="text" name="firstName" placeholder="John" value="John">
+      </div>
+
+      <div class="inputContainer birthdayContainer">
+        <h5>Date of birth</h5>
+        <input disabled class="textInput birthdayInput" type="date" name="" value="2018-02-14">
+      </div>
+
+      <div class="inputContainer mailContainer">
+        <h5>Mail adress</h5>
+        <input disabled class="textInput mailInput" type="mail" name="" placeholder="example@email.com" value="example@email.com">
+      </div>
+
+      <div class="numberContainer heightContainer">
+        <h5>Height (cm)</h5>
+        <input disabled class="numberInput" type="number" name="" placeholder="175" value="175">
+        </div>
+      <div class="numberContainer weightContainer">
+        <h5>Weight (kg)</h5>
+        <input disabled class="numberInput" type="number" name="" placeholder="75" value="75">
+      </div>
+
+
       <div class="buttonContainer">
-        <input class="previousButton" type='submit' name='previous' value="Change destination">
-        <input class="continueButton" type='submit' name='continue' value="Continue">
+        <input id="editButton" class="previousButton" type='button' name='previous' value="Edit informations">
+        <input class="continueButton" type='submit' name='continue' value="Confirm">
       </div>
       <!-- PHP :
       if(isset($_POST['previous'])) { /* ...clear and reset stuff... */ }
       else if(isset($_POST['continue']) { /* ...submit stuff... */ } -->
     </form>
-
-    <div class="priceContainer">
-      <h5>Price</h5>
-      <h2 class="priceDisplay">599€</h2>
-    </div>
   </section>
+
 
   <script type="text/javascript">
     particlesJS("particles-js", {
@@ -232,6 +240,22 @@
         }
       },
       "retina_detect": true
+    });
+  </script>
+
+  <script>
+    var edit_btn = document.querySelector('.previousButton');
+
+    edit_btn.addEventListener('click', function(){
+      var inputlist = document.querySelectorAll('input');
+      for (var i = 0; i < inputlist.length; i++) {
+        inputlist[i].removeAttribute('disabled');
+      }
+      var selectlist = document.querySelectorAll('select')
+      for (var i = 0; i < selectlist.length; i++) {
+        selectlist[i].removeAttribute('disabled');
+      }
+      window.scroll({top: 0, left: 0, behavior: 'smooth' });
     });
   </script>
 
